--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -33,19 +33,219 @@
     "items": {
       "web-dev": {
         "title": "Desenvolvimento Web",
-        "description": "Aplicações web responsivas, Single Page Applications (SPA), Progressive Web Apps (PWA) e integrações com APIs RESTful.",
+        "description": "Soluções web modernas e responsivas utilizando tecnologias de ponta",
         "features": [
           "Aplicações web responsivas",
           "Single Page Applications (SPA)",
           "Progressive Web Apps (PWA)",
-          "Integrações com APIs RESTful"
+          "Integrações com APIs RESTful",
+          "Soluções de e-commerce",
+          "Sistemas de gestão de conteúdo"
+        ]
+      },
+      "mobile-dev": {
+        "title": "Desenvolvimento Mobile",
+        "description": "Aplicativos móveis nativos e multiplataforma para iOS e Android",
+        "features": [
+          "Desenvolvimento nativo para iOS",
+          "Desenvolvimento nativo para Android",
+          "Soluções multiplataforma",
+          "Manutenção de aplicativos",
+          "Otimização para App Store",
+          "Design UI/UX mobile"
+        ]
+      },
+      "cloud": {
+        "title": "Soluções em Nuvem",
+        "description": "Infraestrutura e serviços em nuvem escaláveis e seguros",
+        "features": [
+          "Design de arquitetura em nuvem",
+          "Soluções AWS/Azure/GCP",
+          "Aplicações serverless",
+          "Serviços de migração para nuvem",
+          "Automação DevOps",
+          "Arquitetura de microsserviços"
+        ]
+      },
+      "consulting": {
+        "title": "Consultoria Técnica",
+        "description": "Orientação especializada para suas decisões e estratégia tecnológica",
+        "features": [
+          "Revisão de arquitetura",
+          "Seleção de stack tecnológica",
+          "Avaliações de segurança",
+          "Otimização de performance",
+          "Análise de qualidade de código",
+          "Treinamento de equipes"
         ]
       }
     }
   },
   "portfolio": {
     "title": "Nosso Portfólio",
-    "description": "Conheça alguns dos projetos que desenvolvemos para nossos clientes"
+    "description": "Conheça alguns dos projetos que desenvolvemos para nossos clientes",
+    "categories": {
+      "all": "Todos",
+      "web": "Web",
+      "mobile": "Mobile",
+      "cloud": "Cloud"
+    },
+    "projects": {
+      "project1": {
+        "title": "Plataforma E-commerce Premium",
+        "category": "web",
+        "description": "Plataforma completa de e-commerce com integração de pagamentos e gestão de estoque",
+        "technologies": ["React", "Node.js", "MongoDB", "Stripe", "Redis", "TypeScript"]
+      },
+      "project2": {
+        "title": "App de Delivery de Comida",
+        "category": "mobile",
+        "description": "Aplicativo de entrega de comida com rastreamento em tempo real e integração de pagamentos",
+        "technologies": ["React Native", "Firebase", "Google Maps API", "Stripe"]
+      },
+      "project3": {
+        "title": "Sistema ERP Empresarial",
+        "category": "cloud",
+        "description": "Sistema de gestão empresarial baseado em nuvem com arquitetura de microsserviços",
+        "technologies": ["AWS", "Docker", "Kubernetes", "Node.js", "PostgreSQL"]
+      },
+      "project4": {
+        "title": "Plataforma Imobiliária",
+        "category": "web",
+        "description": "Plataforma avançada de busca e gestão de imóveis com tours virtuais",
+        "technologies": ["Next.js", "Three.js", "PostgreSQL", "AWS S3"]
+      },
+      "project5": {
+        "title": "App de Fitness",
+        "category": "mobile",
+        "description": "Aplicativo completo de acompanhamento fitness com recursos sociais e recomendações baseadas em IA",
+        "technologies": ["Flutter", "Firebase", "TensorFlow", "Node.js"]
+      },
+      "project6": {
+        "title": "Dashboard IoT",
+        "category": "cloud",
+        "description": "Dashboard de monitoramento e gestão de dispositivos IoT em tempo real",
+        "technologies": ["Vue.js", "AWS IoT", "GraphQL", "DynamoDB"]
+      },
+      "project7": {
+        "title": "Sistema de Gestão de Aprendizado",
+        "category": "web",
+        "description": "Plataforma completa de e-learning com streaming de vídeo e ferramentas de avaliação",
+        "technologies": ["React", "Django", "PostgreSQL", "AWS CloudFront"]
+      },
+      "project8": {
+        "title": "App de Gestão de Estoque",
+        "category": "mobile",
+        "description": "Aplicativo móvel de leitura de código de barras e rastreamento de inventário",
+        "technologies": ["React Native", "Node.js", "MongoDB", "Socket.io"]
+      },
+      "project9": {
+        "title": "Migração para Microsserviços",
+        "category": "cloud",
+        "description": "Migração de sistema legado para arquitetura de microsserviços",
+        "technologies": ["Kubernetes", "Docker", "AWS", "Node.js", "Java"]
+      },
+      "project10": {
+        "title": "Plataforma Kubernetes Empresarial",
+        "category": "cloud",
+        "description": "Plataforma Kubernetes multi-cluster com service mesh e pipelines CI/CD automatizados",
+        "technologies": ["Kubernetes", "Istio", "ArgoCD", "Terraform", "AWS EKS"]
+      },
+      "project11": {
+        "title": "E-commerce Serverless",
+        "category": "cloud",
+        "description": "Plataforma de e-commerce altamente escalável usando arquitetura serverless",
+        "technologies": ["AWS Lambda", "DynamoDB", "API Gateway", "CloudFront", "S3"]
+      },
+      "project12": {
+        "title": "Sistema Bancário Cloud-Native",
+        "category": "cloud",
+        "description": "Plataforma bancária baseada em microsserviços com arquitetura orientada a eventos",
+        "technologies": ["AWS ECS", "Kafka", "MongoDB Atlas", "Elastic Stack"]
+      },
+      "project13": {
+        "title": "Plataforma de Inferência ML",
+        "category": "cloud",
+        "description": "Plataforma escalável para implantação e inferência de modelos de machine learning",
+        "technologies": ["Kubernetes", "KubeFlow", "TensorFlow Serving", "AWS SageMaker"]
+      },
+      "project14": {
+        "title": "Pipeline de Dados IoT",
+        "category": "cloud",
+        "description": "Plataforma de processamento e análise de dados IoT em tempo real",
+        "technologies": ["AWS IoT Core", "Kinesis", "Lambda", "Grafana"]
+      },
+      "project15": {
+        "title": "Plataforma de Segurança de Containers",
+        "category": "cloud",
+        "description": "Varredura automatizada de segurança e monitoramento de conformidade para containers",
+        "technologies": ["AWS ECR", "Aqua Security", "Trivy", "HashiCorp Vault"]
+      },
+      "project16": {
+        "title": "CMS Serverless",
+        "category": "cloud",
+        "description": "Plataforma CMS headless com backend serverless",
+        "technologies": ["AWS Lambda", "DynamoDB", "S3", "CloudFront", "API Gateway"]
+      },
+      "project17": {
+        "title": "Plataforma de Trading com IA",
+        "category": "web",
+        "description": "Plataforma de trading de criptomoedas em tempo real com previsões de IA e estratégias automatizadas",
+        "technologies": ["React", "Python", "TensorFlow", "WebSocket", "Redis", "PostgreSQL"]
+      },
+      "project18": {
+        "title": "Sistema de Gestão Hospitalar",
+        "category": "web",
+        "description": "Plataforma completa de saúde para gestão de pacientes e telemedicina",
+        "technologies": ["Vue.js", "Node.js", "WebRTC", "MongoDB", "Socket.io"]
+      },
+      "project19": {
+        "title": "Plataforma de Eventos Virtuais",
+        "category": "web",
+        "description": "Plataforma de streaming ao vivo para conferências e eventos virtuais",
+        "technologies": ["Next.js", "WebRTC", "AWS MediaLive", "Redis", "PostgreSQL"]
+      },
+      "project20": {
+        "title": "App de Controle Casa Inteligente",
+        "category": "mobile",
+        "description": "Sistema de controle de casa inteligente com comandos de voz",
+        "technologies": ["React Native", "AWS IoT", "Redux", "WebSocket"]
+      },
+      "project21": {
+        "title": "Experiência de Compra em RA",
+        "category": "mobile",
+        "description": "Aplicativo de realidade aumentada para visualização de móveis",
+        "technologies": ["Unity", "ARKit", "ARCore", "React Native", "Node.js"]
+      },
+      "project22": {
+        "title": "Analytics de Redes Sociais",
+        "category": "web",
+        "description": "Dashboard avançado para gestão de redes sociais",
+        "technologies": ["React", "D3.js", "Node.js", "Python", "MongoDB"]
+      },
+      "project23": {
+        "title": "App Companheiro de Viagem",
+        "category": "mobile",
+        "description": "Assistente de viagem com IA e navegação offline",
+        "technologies": ["Flutter", "Firebase", "Google Maps SDK", "TensorFlow Lite"]
+      },
+      "project24": {
+        "title": "App de Telemedicina",
+        "category": "mobile",
+        "description": "Plataforma segura de consultas por vídeo para profissionais de saúde",
+        "technologies": ["React Native", "WebRTC", "HIPAA Compliance", "Firebase"]
+      },
+      "project25": {
+        "title": "Tours Virtuais Imobiliários",
+        "category": "web",
+        "description": "Tours virtuais 360° de imóveis com suporte VR",
+        "technologies": ["Three.js", "React", "WebVR", "AWS S3", "Node.js"]
+      }
+    },
+    "cta": {
+      "title": "Tem um projeto em mente?",
+      "button": "Vamos Conversar"
+    }
   },
   "about": {
     "title": "Sobre Hunter Mussel",
