--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -295,5 +295,46 @@
     "johnSmith": {
       "bio": "Senior Backend Developer specializing in scalable architectures and robust APIs."
     }
+  },
+  "plans": {
+    "title": "Support Plans",
+    "subtitle": "Choose the plan that best fits your needs",
+    "mostPopular": "Most Popular",
+    "hoursIncluded": "hours included",
+    "subscribe": "Subscribe",
+    "slaNote": "24/7 SLA available for all plans (+$100/month)",
+    "essential": {
+      "title": "Essential Plan",
+      "description": "Perfect for small businesses with low support demands",
+      "features": [
+        "Simple bug fixes",
+        "Small updates",
+        "Basic technical support",
+        "$45/hour additional"
+      ]
+    },
+    "professional": {
+      "title": "Professional Plan",
+      "description": "Ideal for growing businesses requiring continuous support",
+      "features": [
+        "Priority technical support",
+        "Minor feature implementations",
+        "Basic system monitoring",
+        "Monthly detailed report",
+        "$45/hour additional"
+      ]
+    },
+    "custom": {
+      "title": "Enterprise Plan",
+      "description": "For businesses with complex and frequent demands",
+      "features": [
+        "Fully customizable solution",
+        "24/7 priority service",
+        "Infrastructure & development",
+        "Weekly reports and meetings",
+        "Dedicated support team"
+      ]
+    },
+    "contactUs": "Contact Us"
   }
 }
