--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -6,7 +6,7 @@
     "successRate": "Success Rate"
   },
   "whyChoose": {
-    "title": "Why Choose Professor Mussel?",
+    "title": "Why Choose Hunter Mussel?",
     "description": "We combine extensive technical experience with a personalized approach to deliver solutions that drive your business growth.",
     "items": {
       "expertise": {
