--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -6,7 +6,7 @@
     "successRate": "Taxa de Sucesso"
   },
   "whyChoose": {
-    "title": "Por que escolher Professor Mussel?",
+    "title": "Por que escolher a Hunter Mussel?",
     "description": "Combinamos vasta experiência técnica com uma abordagem personalizada para entregar soluções que impulsionam o crescimento do seu negócio.",
     "items": {
       "expertise": {
